--- a/driver/docker-compose.yml
+++ b/driver/docker-compose.yml
@@ -1,6 +1,6 @@
 replica:
     scale: 2
-    image: cjellick/longhorn:dev
+    image: $LONGHORN_IMAGE
     command:
     - launch
     - replica
@@ -31,7 +31,7 @@ replica:
             quorum: 1
 
 sync-agent:
-    image: cjellick/longhorn:dev
+    image: $LONGHORN_IMAGE
     net: container:replica
     working_dir: /var/lib/rancher/longhorn/$VOLUME_NAME
     volumes_from:
@@ -43,7 +43,7 @@ sync-agent:
     - 0.0.0.0:9504
 
 replica-agent:
-    image: cjellick/longhorn:dev
+    image: $LONGHORN_IMAGE
     net: container:replica
     metadata:
         longhorn:
@@ -54,7 +54,7 @@ replica-agent:
     - --replica
 
 controller:
-    image: cjellick/longhorn:dev
+    image: $LONGHORN_IMAGE
     command:
     - launch
     - controller
@@ -84,7 +84,7 @@ controller:
         unhealthy_threshold: 2
 
 controller-agent:
-    image: cjellick/longhorn:dev
+    image: $LONGHORN_IMAGE
     net: container:controller
     metadata:
         longhorn:
